--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1.12.0", features = ["full"] }
 ansi_term = "0.12.1"
 chrono = "0.4"
 structopt = "0.3.25"
+tokio-cron-scheduler = "0.3.1"
