--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ ansi_term = "0.12.1"
 bluer = "0.13.0"
 chrono = "0.4"
 futures = "0.3"
-job_scheduler = "1.2.1"
-tokio = { version = "1.12.0", features = ["full"] }
+reqwest = "0.11.9"
 structopt = "0.3.25"
+tokio = { version = "1.12.0", features = ["full"] }
+tokio-cron-scheduler = "0.3.1"
