post correct request body

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ edition = "2018"
 ansi_term = "0.12.1"
 async-channel = "1.6.1"
 bluer = "0.13.0"
-chrono = "0.4"
+chrono = { version = "0.4.19", features = ["serde"] }
 futures = "0.3"
-reqwest = "0.11.9"
+reqwest = { version = "0.11.10", features = ["json"] }
+serde = { version = "1.0.137", features = ["derive"] }
 structopt = "0.3.25"
 tokio = { version = "1.12.0", features = ["full"] }
 tokio-cron-scheduler = "0.3.1"
