--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ ansi_term = "0.12"
 async-channel = "1.6"
 bluer = "0.13"
 chrono = { version = "0.4", features = ["serde"] }
+dotenv = "0.15"
 futures = "0.3"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
