--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ async-channel = "1.6"
 bluer = { version = "0.15", features = ["bluetoothd"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
+dotenv_codegen = "0.15"
 futures = "0.3"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
