--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,13 @@ edition = "2018"
 
 [dependencies]
 ansi_term = "0.12"
-async-channel = "1.6"
 bluer = { version = "0.15", features = ["bluetoothd"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 dotenv_codegen = "0.15"
 futures = "0.3"
-reqwest = { version = "0.11", features = ["json"] }
+job_scheduler = "1.2"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 structopt = "0.3"
 tokio = { version = "1.19", features = ["full"] }
-tokio-cron-scheduler = "0.3"
