--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 ansi_term = "0.12"
+anyhow = "1.0"
 bluer = { version = "0.15", features = ["bluetoothd"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
@@ -18,3 +19,4 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 structopt = "0.3"
 tokio = { version = "1.19", features = ["full"] }
+ureq = { version = "2.5", features = ["json"] }
